feat: add hibernate